# conversation-to-spec

./: README.md  pyproject.toml  report.md  report_v0.1.1.md  requirements.txt
app/: __init__.py  evaluation.py  extractor.py  formatter.py  main.py  model_runner.py  parser.py  pipeline.py  postprocessor.py  progress.py  prompt_builder.py  quality.py  schemas.py  segmenter.py  utils.py  verifier.py
configs/: models.yaml  prompts.yaml
dataset/: eval_booking.json  eval_ops.json  eval_samples.json  eval_services.json
docs/: project_1.md  project_2.md  project_2_ko.md
samples/: apartment_maintenance.txt  clinic_booking_dialogue.txt  clinic_inventory.txt  complex_permit.txt  repair_shop.txt  repair_volunteer_dialogue.txt  sample_club_app.txt  sample_restaurant.txt  school_trip_forms.txt
scripts/: evaluate_cross_encoder_scores.py  evaluate_prometheus_judge.py
tests/: fakes.py  test_evaluation.py  test_extractor.py  test_formatter.py  test_model_runner.py  test_pipeline.py  test_progress.py  test_quality.py  test_segmenter.py  test_verifier.py
